<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end"
    android:layout_marginBottom="60dp">

    <ImageButton
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:contentDescription="@string/upload_files"
        app:srcCompat="@android:drawable/stat_sys_upload" />
    <ImageButton
        android:id="@+id/send"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:contentDescription="@string/send"
        />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginBottom="20dp"
       >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:width="300dp"
        android:height="40dp"
        android:layout_gravity="center_vertical"
        />
    <ImageButton
        android:id="@+id/sub"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/ic_btn_speak_now"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/speak"
         />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/body"
            android:layout_gravity="center_vertical"
            />
    <ImageButton
        android:id="@+id/body"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/ic_btn_speak_now"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/speak" />
    </LinearLayout>



</LinearLayout>